Update tutorial notebook text cells

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -4,12 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "<img align=\"left\" src = https://www.linea.org.br/wp-content/themes/LIneA/imagens/logo-header.png width=100 style=\"padding: 20px\"> \n",
-    "<img align=\"left\" src = https://project.lsst.org/sites/default/files/Rubin-O-Logo_0.png width=160 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = https://project.lsst.org/sites/default/files/Rubin-O-Logo_0.png width=160 style=\"padding: 20px\">  \n",
     "\n",
     "## Photo-z Server - Tutorial Notebook\n",
-    "**Contact author**: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) <br> \n",
+    "\n",
+    "**Contact author**: Julia Gschwend ([julia@linea.org.br](mailto:julia@linea.org.br)) \n",
+    "\n",
     "**Last verified run**: yyyy-mm-dd <br>\n",
     "\n"
    ]
@@ -18,12 +19,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "### Introduction\n",
     "The Photo-z Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata is done at the website www.linea.org.br/pz-server (RSP authentication required). There you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and one for user-generated data products. \n",
+    "<font color=red> to do: update URL </font>\n",
     "\n",
     "The registered data products can be accessed directly from Python code using the Photo-z Server's data access API, as demonstrated below.   \n",
     "For a comprehensive documentation about the Photo-z Server, please visit the [Photo-z Server's documentation page](<add link to readthedocs>).\n",
-    "<font color=red> to do: add link to readthedocs  </font>"
+    "<font color=red> to do: add link to readthedocs  </font>\n",
+    "\n",
+    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. An overview of this and other contributions is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
    ]
   },
   {
@@ -55,15 +59,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=red> user authorization here?  Capture github credentials to generate the token </font>"
+    "<font color=red> to do: user authorization here. Capture github credentials to generate the token at the definition of pz_server object. </font>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -71,8 +68,11 @@
    "source": [
     "#### Get basic info from PZ Server\n",
     "\n",
-    "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents. \n",
-    "To display the list of product types supported with a short description:"
+    "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents.\n",
+    "\n",
+    "For instance:\n",
+    "\n",
+    "Display the list of product types supported with a short description;"
    ]
   },
   {
@@ -81,8 +81,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_product_types(md=True) # md=True: display markdown table with product type names and description \n",
-    "                                      # default is md=False : return dictionary "
+    "pz_server.list_product_types.to_pandas() # display table (dataframe w/ 2 columns of strings) with product type names and description \n",
+    "                                         # list_product_types is attribute -> return dictionary "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the list of users who uploaded data products to the server;"
    ]
   },
   {
@@ -91,9 +98,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_users(md=True) # display markdown table with github users with link to respective github profiles\n",
-    "                              # default is md=False : return list \n",
-    "                              # alphabetical order, except by DM's admin user that comes at first position "
+    "pz_server.list_users.to_pandas() # display table (dataframe w/ 1 column of strings) with github users \n",
+    "                                 # alphabetical order, except by DM's admin user that comes at first position \n",
+    "                                 # list_users is attribute -> return list "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display the list of data releases available at the time. "
    ]
   },
   {
@@ -102,9 +116,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_releases # display markdown table with LSST releases (e.g.: DP0.1, DP0.2, DP1, DP2, DR1, ...) \n",
-    "                        # include only those available at the time \n",
-    "                        # default is md=False : return list "
+    "pz_server.list_releases.to_pandas() # display table (dataframe w/ 1 column of strings) with LSST releases (e.g.: DP0.1, DP0.2, DP1, DP2, DR1, ...) \n",
+    "                                    # include only those available at the time \n",
+    "                                    # list_releases is attribute -> return list "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The information above can be used to filter the data products of interest for your search.\n",
+    "\n",
+    "The cells below show examples of usage organized by product types. "
    ]
   },
   {
@@ -123,9 +146,9 @@
    "source": [
     "pz_server.list_products(filters={user:\"PZ Coord. Group\",  # Admin? \n",
     "                                 product_type=\"specz_catalog\", \n",
-    "                                 release=\"all\"})\n",
+    "                                 release=\"all\"}).to_pandas()\n",
     "                        # default: filter=None -> show all products \n",
-    "                        # return dic with product_id an short description provided by the user when uoploaded"
+    "                        # return dic with product_id an short description provided by the user when uploaded"
    ]
   },
   {
@@ -141,35 +164,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_1 = PzServer.get_product_metadata(product_id=\"0001\", md=True)\n",
-    "metadata_specz_1  # markdown table / dic "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_specz_2 = PzServer.get_product_metadata(product_id=\"0002\")\n",
-    "metadata_specz_2  # markdown table / dic "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metadata_specz_3 = PzServer.get_product_metadata(product_id=\"0003\")\n",
-    "metadata_specz_3  # markdown table / dic "
+    "metadata_specz_catalog = PzServer.get_product_metadata(product_id=\"0001\") # display as table \n",
+    "metadata_specz_catalog "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Spec-z Catalog as Pandas DataFrame object"
+    "#### Retrieve a given Spec-z Catalog (as Astropy table or Pandas DataFrame)"
    ]
   },
   {
@@ -178,9 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_specz_1 = PzServer.get_product(product_id=\"0001\", save_file=\"False\")\n",
-    "dataframe_specz_2 = PzServer.get_product(product_id=\"0002\", save_file=\"False\")\n",
-    "dataframe_specz_3 = PzServer.get_product(product_id=\"0003\", save_file=\"False\")"
+    "specz_catalog = PzServer.get_product(product_id=\"0001\", save_file=\"False\").to_pandas()"
    ]
   },
   {
@@ -200,28 +201,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe_specz_2.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataframe_specz_3.describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mini QA Spec-z Catalogs"
+    "Quick visualization of spec-z catalog properties"
    ]
   },
   {
@@ -230,8 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.qa_specz(data=[dataframe_specz_1, dataframe_specz_2, dataframe_specz_3],\n",
-    "                   metadata=[metadata_specz_1, metadata_specz_2, metadata_specz_3])"
+    "pz_server.specz_plots(data=specz_catalog, metadata=metadata_specz_catalog)"
    ]
   },
   {
@@ -248,7 +230,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products_available(user=\"PZ Coord. Group\", product_type=\"train_set\", release=\"all\")"
+    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
+    "                                 product_type=\"train_set\", \n",
+    "                                 release=\"all\"}).to_pandas()\n",
+    "                        # default: filter=None -> show all products \n",
+    "                        # return dic with product_id an short description provided by the user when uploaded"
    ]
   },
   {
@@ -257,7 +243,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products_available(user=\"PZ Coord. Group\", product_type=\"valid_set\", release=\"all\")"
+    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
+    "                                 product_type=\"valid_set\", \n",
+    "                                 release=\"all\"}).to_pandas()\n",
+    "                        # default: filter=None -> show all products \n",
+    "                        # return dic with product_id an short description provided by the user when uploaded"
    ]
   },
   {
@@ -274,7 +264,7 @@
    "outputs": [],
    "source": [
     "metadata_train_set = PzServer.get_product_metadata(product_id=\"0004\")\n",
-    "metadata_train_set  # markdown table"
+    "metadata_train_set "
    ]
   },
   {
@@ -291,14 +281,14 @@
    "outputs": [],
    "source": [
     "metadata_valid_set = PzServer.get_product_metadata(product_id=\"0005\")\n",
-    "metadata_valid_set  # markdown table"
+    "metadata_valid_set "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Training (or Validation) Set as Pandas DataFrame object"
+    "#### Retrieve a given Training (or Validation) Set (as Astropy table or Pandas DataFrame)"
    ]
   },
   {
@@ -307,8 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataframe_train_set = PzServer.get_product(product_id=\"0004\", save_file=\"False\")\n",
-    "dataframe_valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
+    "train_set = PzServer.get_product(product_id=\"0004\", save_file=\"False\").to_pandas()\n",
+    "valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\").to_pandas()"
    ]
   },
   {
@@ -340,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mini QA Traininig and Validaiton Sets"
+    "Quick visualization of training/validation sets properties"
    ]
   },
   {
@@ -349,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.qa_train_valid(data=[dataframe_train_set, dataframe_valid_set], \n",
+    "pz_server.train_valid_plots(data=[dataframe_train_set, dataframe_valid_set], \n",
     "                         metadata=[metadata_train_set, metadata_valid_set])"
    ]
   },
@@ -367,14 +357,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products_available(user=\"PZ Coord. Group\", product_type=\"pz_result\", release=\"all\")"
+    "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
+    "                                 product_type=\"pz_result\", \n",
+    "                                 release=\"all\"}).to_pandas()\n",
+    "                        # default: filter=None -> show all products \n",
+    "                        # return dic with product_id an short description provided by the user when uploaded"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Get metadata of a given Training Set"
+    "#### Get metadata of a given data product of Photo-z Validation Results"
    ]
   },
   {
@@ -391,7 +385,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Retrieve a given Photo-z Validation Result: download .tar file"
+    "#### Retrieve a given Photo-z Validation Result: download .tar file\n",
+    "\n",
+    "This product type is not necessarily (only) tabular data and can be a list of files, so the function `get_produt` will not return an Astropy table. Instead, it will return the name of the tar file downloaded to the local directory. "
    ]
   },
   {
