Update tutorial notebook text

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -492,7 +492,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e9b653658693761946b8083bc5972c6593ddffeb81a0a81b81eabc816026cfc3"
+   }
   }
  },
  "nbformat": 4,
