Add placeholder for API Token to PzServer class

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -21,13 +21,12 @@
    "source": [
     "### Introduction\n",
     "The Photo-z Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata is done at the website www.linea.org.br/pz-server (RSP authentication required). There you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and one for user-generated data products. \n",
-    "<font color=red> to do: update URL </font>\n",
+    "<font color=red> to do: update URL when production environment is online </font>\n",
     "\n",
-    "The registered data products can be accessed directly from Python code using the Photo-z Server's data access API, as demonstrated below.   \n",
-    "For a comprehensive documentation about the Photo-z Server, please visit the [Photo-z Server's documentation page](<add link to readthedocs>).\n",
+    "The registered data products can also be accessed directly from Python code using the Photo-z Server's data access API, as demonstrated below. For a comprehensive documentation about the Photo-z Server, please visit the [Photo-z Server's documentation page](<add link to readthedocs>).\n",
     "<font color=red> to do: add link to readthedocs  </font>\n",
     "\n",
-    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. An overview of this and other contributions is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
+    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. An overview of this and other contributions related to Photo-zs is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
    ]
   },
   {
@@ -43,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pz_server import PzServer"
+    "! export PYTHONPATH=$PYTHONPATH:/Users/julia/github/pz-server-lib"
    ]
   },
   {
@@ -52,14 +51,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server = PzServer()"
+    "from pz_server import PzServer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=red> to do: user authorization here. Capture github credentials to generate the token at the definition of pz_server object. </font>"
+    "The connection with the Photo-z Server from Python code is done by an object of the class `PzServer`. To get authorization to define an instance of `PzServer`, the RSP users must provide an **API Token** generated on the [Photo-z Server website](www.linea.org.br/pz-server). See the steps on the screenshots below.  \n",
+    "<font color=red> to do: check link URL </font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red> to do: include screenshots of token generation steps on the Photo-z Server website.  </font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"<paste your API Token here>\")"
    ]
   },
   {
