update logo linea url

--- a/tutorial/tutorial.ipynb
+++ b/tutorial/tutorial.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = https://www.linea.org.br/wp-content/themes/LIneA/imagens/logo-header.png width=100 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = https://linea.org.br/wp-content/themes/LIneA/imagens/logo-header.jpg width=100 style=\"padding: 20px\"> \n",
+    "\n",
+    "\n",
     "<img align=\"left\" src = https://project.lsst.org/sites/default/files/Rubin-O-Logo_0.png width=160 style=\"padding: 20px\">  \n",
     "\n",
     "## Photo-z Server - Tutorial Notebook\n",
@@ -66,7 +68,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=red> to do: include screenshots of token generation steps on the Photo-z Server website.  </font>"
+    "<img src=\"./images/ScreenShot1.png\" width=110pt style=\"padding: 30px\"/> <img src=\"./images/ScreenShot2.png\" width=300pt />\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red> to do: UPDATE screenshots  </font>"
    ]
   },
   {
@@ -75,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server = PzServer(token=\"<paste your API Token here>\")"
+    "pz_server = PzServer(token=\"<paste your API Token here>\") "
    ]
   },
   {
@@ -97,8 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_product_types.to_pandas() # display table (dataframe w/ 2 columns of strings) with product type names and description \n",
-    "                                         # list_product_types is attribute -> return dictionary "
+    "pz_server.list_product_types.to_pandas() "
    ]
   },
   {
@@ -114,9 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_users.to_pandas() # display table (dataframe w/ 1 column of strings) with github users \n",
-    "                                 # alphabetical order, except by DM's admin user that comes at first position \n",
-    "                                 # list_users is attribute -> return list "
+    "pz_server.list_users.to_pandas()"
    ]
   },
   {
@@ -132,9 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_releases.to_pandas() # display table (dataframe w/ 1 column of strings) with LSST releases (e.g.: DP0.1, DP0.2, DP1, DP2, DR1, ...) \n",
-    "                                    # include only those available at the time \n",
-    "                                    # list_releases is attribute -> return list "
+    "pz_server.list_releases.to_pandas() "
    ]
   },
   {
@@ -148,7 +152,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Spec-z Catalog \n",
     "#### List Spec-z Catalogs available on Pz Server"
@@ -160,11 +166,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={user:\"PZ Coord. Group\",  # Admin? \n",
+    "pz_server.list_products(filters={user:\"PZ Coord. Group\",  \n",
     "                                 product_type=\"specz_catalog\", \n",
-    "                                 release=\"all\"}).to_pandas()\n",
-    "                        # default: filter=None -> show all products \n",
-    "                        # return dic with product_id an short description provided by the user when uploaded"
+    "                                 release=\"all\"}).to_pandas()"
    ]
   },
   {
@@ -180,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_specz_catalog = PzServer.get_product_metadata(product_id=\"0001\") # display as table \n",
+    "metadata_specz_catalog = pz_server.get_product_metadata(product_id=\"0001\")\n",
     "metadata_specz_catalog "
    ]
   },
@@ -197,7 +201,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "specz_catalog = PzServer.get_product(product_id=\"0001\", save_file=\"False\").to_pandas()"
+    "specz_catalog = pz_server.get_product(product_id=\"0001\", save_file=\"False\").to_pandas()\n",
+    "specz_catalog"
    ]
   },
   {
@@ -248,9 +253,7 @@
    "source": [
     "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
     "                                 product_type=\"train_set\", \n",
-    "                                 release=\"all\"}).to_pandas()\n",
-    "                        # default: filter=None -> show all products \n",
-    "                        # return dic with product_id an short description provided by the user when uploaded"
+    "                                 release=\"all\"}).to_pandas()"
    ]
   },
   {
@@ -261,9 +264,7 @@
    "source": [
     "pz_server.list_products(filters={user:\"PZ Coord. Group\",   \n",
     "                                 product_type=\"valid_set\", \n",
-    "                                 release=\"all\"}).to_pandas()\n",
-    "                        # default: filter=None -> show all products \n",
-    "                        # return dic with product_id an short description provided by the user when uploaded"
+    "                                 release=\"all\"}).to_pandas()"
    ]
   },
   {
@@ -508,7 +509,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.7.6"
   },
   "vscode": {
    "interpreter": {
