display info as pandas dataframes

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -44,16 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! export PYTHONPATH=$PYTHONPATH:/Users/julia/github/pz-server-lib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pz_server import PzServer"
+    "from pz_server import PzServer\n",
+    "%reload_ext autoreload \n",
+    "%autoreload 2"
    ]
   },
   {
@@ -81,15 +74,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_server = PzServer(token=\"b4aa6b252f800827db080afce98172f52f31f551\") "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_product_types()#.to_pandas() "
+    "pz_server.list_product_types()"
    ]
   },
   {
@@ -124,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_users.to_pandas()"
+    "pz_server.list_users()"
    ]
   },
   {
@@ -140,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_releases.to_pandas() "
+    "pz_server.list_releases()"
    ]
   },
   {
@@ -168,9 +152,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products(filters={user:\"PZ Coord. Group\",  \n",
-    "                                 product_type=\"specz_catalog\", \n",
-    "                                 release=\"all\"}).to_pandas()"
+    "pz_server.list_products()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server.list_products().query(\"product_type == 2\")#,  \n",
+    "                          #       product_type=\"specz_catalog\", \n",
+    "                          #       release=\"all\"})#.to_pandas()"
    ]
   },
   {
@@ -282,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_train_set = PzServer.get_product_metadata(product_id=\"0004\")\n",
+    "metadata_train_set = pz_server.get_product_metadata(product_id=\"0004\")\n",
     "metadata_train_set "
    ]
   },
@@ -299,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_valid_set = PzServer.get_product_metadata(product_id=\"0005\")\n",
+    "metadata_valid_set = pz_server.get_product_metadata(product_id=\"0005\")\n",
     "metadata_valid_set "
    ]
   },
@@ -316,8 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_set = PzServer.get_product(product_id=\"0004\", save_file=\"False\").to_pandas()\n",
-    "valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\").to_pandas()"
+    "train_set = PzServer.get_product(product_id=\"0004\", save_file=\"False\")\n",
+    "valid_set = PzServer.get_product(product_id=\"0005\", save_file=\"False\")"
    ]
   },
   {
@@ -396,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata_pz_result = PzServer.get_product_metadata(product_id=\"0006\")\n",
+    "metadata_pz_result = pz_server.get_product_metadata(product_id=\"0006\")\n",
     "metadata_pz_result  # markdown table"
    ]
   },
@@ -415,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_result = PzServer.get_product(product_id=\"0006\", save_file=\"True\")\n",
+    "pz_result = pz_server.get_product(product_id=\"0006\", save_file=\"True\")\n",
     "pz_result # string tar file name"
    ]
   },
