--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -22,20 +22,33 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "The Photo-z Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata is done at the website https://pz-server-dev.linea.org.br/ (RSP authentication required). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and one for user-generated data products. \n",
+    "The Photo-z Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website https://pz-server-dev.linea.org.br/. There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. \n",
     "<font color=red> to do: update URL when production environment is online </font>\n",
     "\n",
     "The registered data products can also be accessed directly from Python code using the Photo-z Server's data access API, as demonstrated below. For a comprehensive documentation about the Photo-z Server, please visit the [Photo-z Server's documentation page](<add link to readthedocs>).\n",
     "<font color=red> to do: add link to readthedocs  </font>\n",
     "\n",
-    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. An overview of this and other contributions related to Photo-zs is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
+    "The Photo-z Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not connected to RSP. However, it requires RSP credentials for authentication. An overview of this and other contributions related to Photo-zs is available [here](https://linea-it.github.io/pz-lsst-inkind-doc/).  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Setup"
+    "### Installation\n",
+    "\n",
+    "The Photo-z Server API is avalialble on **pip** as  `pz-server-lib`. To install the API and its dependencies, type:  \n",
+    "\n",
+    "<font style=\"background-color:black; color:white;\" face=\"Courier New\"> $ pip install pz-server-lib </font>  \n",
+    "\n",
+    "on your Terminal. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Imports and Setup"
    ]
   },
   {
@@ -61,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./images/ScreenShotTokenMenu.png\" width=110pt style=\"padding: 30px\"/>"
+    "<img src=\"./images/ScreenShotTokenMenu.png\" width=150pt align=\"top\"/> <img src=\"./images/ScreenShotTokenGenerator.png\" width=300pt/>"
    ]
   },
   {
@@ -74,14 +87,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pz_server = PzServer(token=\"d0b75acf283e9c040ed02a439c14dde63c17a1c0\", host=\"pz-dev\") "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Get basic info from PZ Server\n",
     "\n",
-    "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents.\n",
-    "\n",
-    "For instance:\n",
+    "The object `pz_server` brings some useful attributes for the user to navigate throug the available contents. For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -131,9 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The information above can be used to filter the data products of interest for your search.\n",
-    "\n",
-    "The cells below show examples of usage organized by product types. "
+    "The information above can be used to filter the data products of interest for your search. The cells below show examples of usage organized by product types. "
    ]
   },
   {
@@ -152,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server.list_products()"
+    "pz_server.list_products(filter={\"user\":\"Julia\"})"
    ]
   },
   {
@@ -490,9 +508,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pz-server",
    "language": "python",
-   "name": "python3"
+   "name": "pz-server"
   },
   "language_info": {
    "codemirror_mode": {
@@ -504,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.0"
   },
   "vscode": {
    "interpreter": {
